--- a/start-here/src/index.html
+++ b/start-here/src/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fox Game</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Fox Pet</title>
     <link rel="stylesheet" href="./sprites.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <div class="container">
       <div class="inner">
@@ -16,17 +18,17 @@
         <div class="foreground-rain"></div>
         <div class="frame"></div>
         <div class="modal">
-          <div class="modal-inner">Press the middle button to start.</div>
+          <div class="modal-inner">Press the middle button to start</div>
         </div>
         <div class="buttons">
-          <div class="btn left-btn"></div>
-          <div class="btn middle-btn"></div>
-          <div class="btn right-btn"></div>
+          <button class="btn left-btn"></button>
+          <button class="btn middle-btn"></button>
+          <button class="btn right-btn"></button>
         </div>
         <div class="icons">
-          <div class="icons highlighted fish-icon"></div>
-          <div class="icons poop-icon"></div>
-          <div class="icons weather-icon"></div>
+          <div class="icon highlighted fish-icon"></div>
+          <div class="icon poop-icon"></div>
+          <div class="icon weather-icon"></div>
         </div>
       </div>
     </div>
